# guake-indicator

./: configure.ac
src/: Makefile.am  guake-indicator-edit-menu.c  guake-indicator.c
